# lexstat

./: ChangeLog  Makefile.am  README.md  configure.ac
cgi/: Makefile.am  ext_string.h  fcgi_common.h  lexstat_index.html  lexstat_web.cpp
cgi/css/: lexstat.css
data/: CET-4.DICT  CET-4.raw  CET-6.DICT  CET-6.raw  GRE.DICT  GRE.raw  IELTS.DICT  IELTS.raw  Makefile.am  PG-E.DICT  PG-E.raw  STOPWORD.DICT  STOPWORD.raw  TOFEL.DICT  TOFEL.raw
src/: Makefile.am  gendict.c  gendict.sh  gendict_oxford.c  gendict_stopword.c  iconv_code.c  lexstat.c  lexstat.h  lexstat_api.cpp  lexstat_api.hpp  qdbm_read.c  singleton_curl.cpp  singleton_curl.hpp  singleton_lexstat.cpp  singleton_lexstat.hpp  singleton_libxml2.cpp  singleton_libxml2.hpp  stemming.c  stemming.h
tools/: odd_line.sh
